--- a/Day 07/dayseven/src/main/resources/application.properties
+++ b/Day 07/dayseven/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=dayseven
+spring.datasource.url=jdbc:mysql://localhost:3306/exercisedb
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
