--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "interactive",
     "java.project.sourcePaths": [
-        "Day 10/ict/src/main/java"
+        "Day 10/ict/src/main/java",
+        "Day 11 & Day 12/ict/src/main/java"
     ]
 }
