--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,20 @@
             "name": "IctApplication",
             "request": "launch",
             "mainClass": "lk.vau.fas.ict.IctApplication",
+            "projectName": ""
+        },
+        {
+            "type": "java",
+            "name": "IctApplication",
+            "request": "launch",
+            "mainClass": "IctApplication",
+            "projectName": "IT3232-E-commerce_Class-Works_d3a8fe44"
+        },
+        {
+            "type": "java",
+            "name": "IctApplication",
+            "request": "launch",
+            "mainClass": "lk.vau.fas.ict.IctApplication",
             "projectName": "lk.vau.fas-ict"
         },
         {
